	* Fixed bug #7981: Replace ugly labels in BE Log module
	* Fixed bug #1585: Use t3lib_div::sysLog() whenever errors occur in tslib_fe. Additionally, add a new value "request_uri" to the "config.stat_apache_pagenames" property which allows logging of the REQUEST_URI server value (useful with RearUrl environments). Thanks to Steffen Kamper for taking care of these issues.

2008-04-01  Ingo Renner <ingo@typo3.org>

	* Fixed bug #5998: Crawler/Index Config: hidden records are re-indexed, credits Christian Kuhn
	* Fixed bug #7831: List in Page module has wrong colors, credits Steffen Kamper

2008-04-01  Jeff Segars <jeff@webempoweredchurch.org>

	* Fixed bug #7943: Filelist has nested HTML (thanks to Steffen Kamper)
	* Fixed bug #7820: Task center iframes are only sized on load (thanks to Steffen Kamper)

2008-04-01  Benjamin Mack <benni@typo3.org>

	* Fixed bug #7977: Missing label for browse_links folder menu

2008-04-01  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #7784: Check for mail configuration is wrong on Windows
	* Fixed bug #7839: Linking between domains in the pagetree with checkRootline does not work with menus

2008-03-31  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #7768: TCEForms extraFormHeaders do not work with docheaders

2008-03-31  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #7954: XCLASSing ToolbarItem does not work (thanks to Steffen Kamper)
	* Fixed bug #7759: XCLASSing USER_INT objects does not work
	* Cleaned up code of scripts in typo3/classes/
	* Followup to #6087: Cleaned up code of IRRE localization
	* Cleaned up code of scripts in t3lib/ and typo3/
	* Fixed bug #7971: Missing icon in t3skin for header - tt_content_header.gif (thanks to Steffen Kamper)
	* Fixed bug #7976: prioriCalc does not work correctly

2008-03-31  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #7920: Filelist in IE 6 is not showing contents (thanks to Ingo Schmitt and Steffen Kamper)