@@ -979,7 +979,7 @@ class t3lib_DB {
 	 * In a DBAL this method should 1) look up all tables from the DBMS  of the _DEFAULT handler and then 2) add all tables *configured* to be managed by other handlers
 	 * Usage count/core: 2
 	 *
-	 * @return	array		Tables in an array with tablename as key and an array with status information as value
+	 * @return	array		Array with tablenames as key and arrays with status information as value
 	 */
 	function admin_get_tables()	{
 		$whichTables = array();
