@@ -486,6 +486,7 @@ class t3lib_sqlengine extends t3lib_sqlparser {
 	 * (DUMMY) Returns the list of tables from the database
 	 *
 	 * @return	array		Tables in an array (tablename is in both key and value)
+	 * @todo	Should return table details in value! see t3lib_db::admin_get_tables()
 	 */
 	function admin_get_tables()	{
 		$whichTables = array();
