@@ -168,7 +168,7 @@ class tx_dbal_handler_openoffice extends t3lib_sqlengine {
 	/**
 	 * Returns the list of tables from the database
 	 *
-	 * @return	array		Tables in an array (tablename is in both key and value)
+	 * @return	array		Tables in an array with tablename as key and an array with status information as value
 	 */
 	function admin_get_tables()	{
 
