@@ -214,6 +214,7 @@ debug($this->errorStatus,'XMLDB connect ERROR:');
 	 * Returns the list of tables from the database
 	 * 
 	 * @return	array		Tables in an array (tablename is in both key and value)
+	 * @todo	Should return table details in value! see t3lib_db::admin_get_tables()
 	 */
 	function admin_get_tables()	{
 		
